<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="login_app_name">login</string>
    <string name="login_input_account">账户</string>
    <string name="login_input_password">密码</string>
    <string name="welcome" tools:ignore="ResourceName">德莱联盟</string>
    <string name="login_welcome_use">欢迎使用</string>
    <string name="login_account">账号</string>
    <string name="login_passsword">密码</string>
    <string name="login_login">登陆</string>
    <string name="login_no_account_register">没有账号？前往注册</string>
    <string name="login_tourist">我是游客，随便看看\n(不保存记录，如搜索、阅读历史等)</string>
</resources>