<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="world.share.login.model.LoginViewModel" />
    </data>

    <world.share.widget.SrcScrollFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:maskLayerColor="#80000000"
        app:scrollOrientation="vertical"
        app:src="@mipmap/login_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/black"
            tools:context=".mvvm.ui.activity.LoginActivity">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="android-logo.json"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_welcome_use"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/sp_30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lottieAnimationView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="40dp"
                android:textColorHint="#FFFFFF"
                app:hintTextColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/tvLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/login_account"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@={viewModel.account}"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:theme="@style/TextInputWhiteStyle"
                    binding:textChanged="@{viewModel.onAccountChangeCommand}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:textColorHint="#FFFFFF"
                app:hintTextColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/tlAccount"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/login_passsword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@={viewModel.pwd}"
                    android:textColor="#FFFFFF"
                    android:theme="@style/TextInputWhiteStyle"
                    binding:textChanged="@{viewModel.onPwdChangeCommand}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/gray_btn_corner_10dp"
                android:text="@string/login_login"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                binding:onClickCommand="@{viewModel.btnLoginClick}" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/login_no_account_register"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                binding:onClickCommand="@{viewModel.registerClickCommand}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/login_tourist"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_register"
                binding:onClickCommand="@{viewModel.touristClickCommand}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </world.share.widget.SrcScrollFrameLayout>

</layout>

